# nanny

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  nanny.doap
client/: Makefile.am
client/common/: Makefile.am
client/common/icons/: Makefile.am  index.theme
client/common/icons/16x16/: Makefile.am
client/common/icons/22x22/: Makefile.am
client/common/icons/24x24/: Makefile.am
client/common/icons/256x256/: Makefile.am
client/common/icons/32x32/: Makefile.am
client/common/icons/48x48/: Makefile.am
client/common/icons/scalable/: Makefile.am
client/common/src/: Categories.py  DBusClient.py  Makefile.am  PyroClient.py  Singleton.py  Utils.py  __init__.py
client/gnome/: Makefile.am  __init__.py.in
client/gnome/admin/: Makefile.am  NannyAdminConsole  NannyBlacklistManager  nanny-admin-console  nanny-blacklist-manager  nanny-desktop-blocker
client/gnome/admin/data/: Makefile.am  nanny-admin-console.desktop.in  nanny-blacklist-manager.desktop.in
client/gnome/admin/data/glade/: Makefile.am  nac_wcf_dialog.glade  nac_wcf_edit_dialog.glade  nbm_pbl_edit_dialog.glade
client/gnome/admin/data/icons/: Makefile.am
client/gnome/admin/data/ui/: Makefile.am  nac_chores_dialog.ui  nac_chores_edit_dialog.ui  nac_wcf_dialog.ui  nanny_admin_console.ui  nanny_desktop_blocker.ui  nbm_pbl_dialog.ui
client/gnome/admin/src/: AdminConsole.py  BlacklistManager.py  ConfigureChoresDialog.py  ConfigureProxyDialog.py  DesktopBlocker.py  Makefile.am  ScheduleCalendar.py  __init__.py.in
client/gnome/nanny-firefox-win32/: Makefile.am  nanny-firefox-blocker
client/gnome/systray/: Makefile.am  NannySystray  nanny-systray
client/gnome/systray/data/: Makefile.am  nanny-systray.desktop
client/gnome/systray/src/: Makefile.am  SystrayNanny.py  __init__.py.in  gtkPopupNotify.py
daemon/: Makefile.am  NannyService.py  build_py2exe.py  nanny-daemon-win.py  nanny-no-daemon.sh  nanny.tap
daemon/data/: Makefile.am  org.gnome.nanny.policy.in
daemon/data/applists/: Makefile.am  browser  browser.w32  browsers  browsers.w32  email  email.w32  im  im.w32
daemon/data/bwww/: index.html
daemon/data/dbus/: Makefile.am  nanny-daemon.conf
daemon/data/etld/: Makefile.am
daemon/data/init.d/: Makefile.am
daemon/data/init.d/debian/: Makefile.am  nanny
daemon/data/init.d/mandriva/: Makefile.am  nanny
daemon/data/init.d/redhat/: Makefile.am  nanny
daemon/data/init.d/suse/: Makefile.am  nanny
daemon/src/: BlockingDeferred.py  ChoreManager.py  Chrono.py  Daemon.py  DansGuardianImporter.py  FilterManager.py  LinuxFiltering.py  LinuxSessionCKFiltering.py  LinuxSessionFiltering.py  LinuxUsersManager.py  LinuxWebContentFiltering.py  Makefile.am  NannyDBus.py  NannyPyroBus.py  QuarterBack.py  Win32Chrono.py  Win32Filtering.py  Win32SessionFiltering.py  Win32Top.py  Win32UsersManager.py  Win32WebContentFiltering.py  __init__.py  etld.py  etld.py.in  gregexmodule.c
daemon/src/contrib/: Makefile.am  __init__.py  daemon.py
daemon/src/proxy/: BadWebTemplate.py  Controllers.py  Importer.py  Makefile.am  Proxy.py  TwistedProxy.py
debian/: changelog  control  copyright  init.d  nanny-default  postinst  postrm  prerm  rules
help/: Makefile.am  nanny.omf.in  nanny.xml
help/C/: nanny.xml
help/cs/: cs.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/sl/: sl.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  de.po  el.po  eo.po  es.po  et.po  fr.po  gl.po  he.po  hu.po  it.po  lt.po  nanny.pot  nb.po  nds.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  vi.po  zh_CN.po
