include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = nanny
DOC_ENTITIES = legal.xml nanny.xml
DOC_INCLUDES = 
DOC_FIGURES = figures/nanny-add-web-to-filter.png       \
              figures/nanny-browser.png	                \
              figures/nanny-session.png                 \
              figures/nanny-web-content-filtering.png
DOC_LINGUAS = 

helpdir = $(datadir)/gnome/help/nanny/C/
help_DATA = C/nanny.xml C/figures/nanny-add-web-to-filter.png  C/figures/nanny-browser.png  C/figures/nanny-session.png  C/figures/nanny-web-content-filtering.png 

EXTRA_DIST=$(help_DATA)

